Single URL commitToFile is working. e.g., http://localhost:10010/convertToFile?templateName=input.docx&replacementJson=%7B%22firstname%22%3A%22Joe%22%2C%20%22lastname%22%3A%22Smith%22%7D
