# Source/api/swagger/swagger.yaml
@@ -71,6 +71,35 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
+  /convertToFile:
+    # binds a127 app logic to a route
+    x-swagger-router-controller: doc_process
+    get:
+      description: Converts the document in /Templates/ folder and downloads the document
+      # used as the method name of the controller
+      operationId: convertToFile
+      parameters:
+        - name: templateName
+          in: query
+          description: The name of the template document (e.g., "AML Cert - IntApp.docx")
+          required: true
+          type: string
+        - name: replacementJson
+          in: query
+          description: Replacement pairs in the template document to convert (e.g., {"firstname":"Joe", "lastname":"Smith"})
+          required: true
+          type: string
+      responses:
+        "200":
+          description: Success
+          schema:
+            # a pointer to a definition
+            $ref: "#/definitions/DocConvertResponse"
+        # responses may fall through to errors
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
   /swagger:
     x-swagger-pipe: swagger_raw
 # complex objects have schema definitions
